--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,57 @@
+a {
+  text-decoration: none;
+}
+
+a:visited {
+  color: white;
+}
+
+a:hover {
+  cursor: pointer;
+  color: darkgray;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+}
+
 .layout {
-  background-color: #d4c7b1;
+  background-color: black;
   max-width: 1290px;
   margin: auto;
+}
+
+.global__button {
+  background-color: #2e4a4a;
+  border: none;
+  border-radius: 3px;
+  color: white;
+  text-align: center;
+  justify-items: center;
+}
+
+.global__button:hover {
+  cursor: pointer;
+  background-color: #efe4d3;
+  color: black;
+}
+
+.global__box-shadow {
+  box-shadow: 5px 5px 10px black;
+}
+
+.global__page-borders {
+  border-right: 15px solid;
+  border-left: 15px solid;
+  border-image: url("/pageBorder.png") 30 fill;
+}
+
+.global__wood-accent {
+  width: 100%;
+  height: 15px;
+}
+
+.global__wood-accent_reversed {
+  transform: scaleX(-1);
 }
