css responsive design

--- a/src/app/ui/CallToActionSection/CallToActionSection.css
+++ b/src/app/ui/CallToActionSection/CallToActionSection.css
@@ -1,5 +1,11 @@
 .section {
   display: flex;
   justify-content: space-around;
-  margin-top: 7px;
+  margin: 10px 0;
+}
+
+@media (min-width: 320px) and (max-width: 780px) {
+  .section {
+    display: none;
+  }
 }
