--- a/src/app/ui/Header/Header.css
+++ b/src/app/ui/Header/Header.css
@@ -33,3 +33,19 @@
   left: 2%;
   z-index: 1000;
 }
+
+@media (min-width: 320px) and (max-width: 800px) {
+  .header__navigation {
+    padding-right: 25px;
+    height: 40px;
+    font-size: 18px;
+    gap: 16px;
+  }
+
+  .header__logo {
+    width: 75px;
+    height: 75px;
+    top: 12px;
+    left: 4%;
+  }
+}
