--- a/src/app/ui/TextBox/TextBox.css
+++ b/src/app/ui/TextBox/TextBox.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-around;
   background-color: #f2eee2;
-  margin: 10px 0 20px;
+  margin: 10px 0;
   color: black;
   height: fit-content;
 }
@@ -26,20 +26,90 @@
 
 .text-box__section_title {
   font-size: 23px;
-  margin: 10px 0 7px;
+  margin: 10px 0 0;
   font-weight: 400;
 }
 
-.text-box__section_title::after {
+.title__divider {
   content: "";
   display: block;
-  border: solid 0.5px black;
-  margin-top: 7px;
+  width: 85%;
+  height: 1px;
+  background-color: #000;
   align-self: center;
+  margin: 5px 0;
 }
 
 .text-box__section_description {
   font-size: 15px;
   font-weight: 400;
   margin: 0 5px 10px;
+}
+
+@media (min-width: 781px) and (max-width: 999px) {
+  .text-box__section {
+    width: 22%;
+  }
+
+  .text-box__section_title {
+    font-size: 18px;
+    margin: 5px 0 0;
+    font-weight: 400;
+  }
+
+  .text-box__section_description {
+    font-size: 12px;
+    margin: 0 0 10px;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 780px) {
+  .text-box {
+    flex-direction: column;
+    justify-content: space-around;
+    margin-bottom: 20px;
+    height: fit-content;
+    margin: 0 0 10px;
+    background-color: transparent;
+    gap: 10px;
+    box-shadow: none;
+    padding: 10px 0;
+    margin: 5px 10px 0;
+  }
+
+  .text-box__section {
+    box-sizing: border-box;
+    width: 100%;
+    padding: 10px 15px 18px;
+    align-items: flex-start;
+    background-color: #f2eee2;
+    border: black solid 2px;
+    border-radius: 7px;
+  }
+
+  .text-box__divider {
+    display: none;
+  }
+
+  .text-box__section_title {
+    text-align: left;
+    width: 120px;
+    box-sizing: border-box;
+    font-size: 18px;
+    margin: 0 0 5px;
+    padding: 0;
+    width: 100%;
+    text-decoration: underline;
+  }
+
+  .title__divider {
+    display: none;
+  }
+
+  .text-box__section_description {
+    margin: 0;
+    text-align: left;
+    width: 100%;
+    font-size: 14px;
+  }
 }
