--- a/src/app/contact/page.css
+++ b/src/app/contact/page.css
@@ -12,14 +12,19 @@
   padding: 40px;
 }
 
+.contact__border-image {
+  object-fit: cover;
+}
+
 .contact-page__title {
   align-self: center;
-  font-size: 48px;
+  font-size: 46px;
   color: #efe4d3;
   letter-spacing: 3px;
   margin: 0;
   padding: 10px;
-  width: 710px;
+  width: 100%;
+  max-width: 710px;
   background-color: #191919;
   text-align: center;
   box-sizing: border-box;
@@ -31,8 +36,10 @@
 
 .form__wrapper {
   position: relative;
-  padding: 20px 50px;
-  width: 600px;
+  box-sizing: border-box;
+  padding: 20px 60px;
+  width: 100%;
+  max-width: 710px;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
@@ -47,7 +54,7 @@
 }
 
 .form__title {
-  font-size: 32px;
+  font-size: 28px;
   margin: 5px 0 2px;
 }
 
@@ -57,6 +64,7 @@
   max-width: 400px;
   margin: 0;
   align-self: center;
+  font-size: 16px;
 }
 
 .form__description::after {
@@ -71,6 +79,9 @@
 
 .form__accent {
   position: absolute;
+  height: auto;
+  max-width: 90px;
+  width: 7vw;
 }
 
 .accent__top-left {
@@ -98,6 +109,139 @@
 
 .form__accent-pen {
   position: absolute;
-  bottom: -90px;
-  right: -40px;
+  bottom: -5vw;
+  right: -5vw;
+  max-width: 333px;
+  width: 25vw;
+  height: auto;
+}
+
+@media (min-width: 320px) and (max-width: 1070px) {
+  .contact-page__title {
+    font-size: 4vw;
+    padding: 10px;
+  }
+
+  .form__title {
+    font-size: 2.4vw;
+  }
+
+  .form__description {
+    font-size: 1.4vw;
+  }
+
+  .contact__border-image {
+    width: 80px;
+  }
+
+  .form__accent-pen {
+    bottom: -4vw;
+    right: -4vw;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 980px) {
+  .contact-page__contact {
+    border: none;
+  }
+
+  .contact__border-image {
+    display: none;
+  }
+
+  .form__accent-pen {
+    bottom: -3vw;
+    right: -40px;
+  }
+}
+
+@media (min-width: 720px) and (max-width: 980px) {
+  .contact-page__contact {
+    padding-top: 60px;
+  }
+
+  .form__wrapper {
+    padding: 10px 60px;
+  }
+
+  .contact-page__title {
+    font-size: 4.5vw;
+    padding: 10px;
+  }
+
+  .form__title {
+    font-size: 3vw;
+  }
+
+  .form__description {
+    font-size: 2vw;
+  }
+
+  .form__accent-pen {
+    display: none;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 720px) {
+  .contact-page__contact {
+    padding: 50px 20px;
+  }
+
+  .form__wrapper {
+    max-width: 600px;
+    padding: 10px 30px;
+  }
+
+  .contact-page__title {
+    max-width: 600px;
+    font-size: 5vw;
+    padding: 6px;
+  }
+
+  .form__title {
+    font-size: 3.5vw;
+    margin: 0;
+  }
+
+  .form__description {
+    font-size: 2.3vw;
+    margin-bottom: 5px;
+  }
+
+  .form__description::after {
+    margin: 10px 0;
+    width: 100%;
+  }
+
+  .form__accent {
+    display: none;
+  }
+
+  .form__accent-pen {
+    display: none;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 600px) {
+  .form__title {
+    font-size: 4vw;
+  }
+
+  .form__description {
+    font-size: 2.6vw;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 720px) {
+  .contact-page__title {
+    font-size: 30px;
+  }
+
+  .form__title {
+    font-size: 20px;
+  }
+
+  .form__description {
+    font-size: 15px;
+  }
 }
