--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,6 +16,10 @@ ul {
   margin: 0;
 }
 
+body {
+  min-height: 100dvh;
+}
+
 .layout {
   background-color: black;
   max-width: 1290px;
@@ -54,4 +58,21 @@ ul {
 
 .global__wood-accent_reversed {
   transform: scaleX(-1);
+}
+
+@media (min-width: 320px) and (max-width: 650px) {
+  .global__wood-accent_reversed {
+    display: none;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 630px) {
+  .global__wood-accent {
+    width: 100%;
+    height: 12px;
+  }
+
+  .global__box-shadow {
+    box-shadow: 3px 3px 8px black;
+  }
 }
