--- a/src/app/our-story/page.css
+++ b/src/app/our-story/page.css
@@ -13,16 +13,15 @@
   display: flex;
   justify-content: space-around;
   gap: 20px;
-  height: auto;
   padding: 30px;
   box-shadow: inset black 5px 5px 10px;
-  height: fit-content;
 }
 
 .about__header-image {
   position: relative;
   width: 100%;
-  height: 550px;
+  max-height: 550px;
+  height: 43vw;
   object-fit: cover;
   object-position: top;
   z-index: 1;
@@ -38,11 +37,12 @@
   border: 10px solid #151515;
   margin: 0px;
   align-items: center;
+  padding: 22px 30px;
 }
 
 .about__description-title {
   font-size: 34px;
-  margin-top: 22px;
+  margin: 0;
   line-height: 2rem;
 }
 
@@ -55,7 +55,7 @@
 }
 
 .about__description-text {
-  margin-bottom: 22px;
+  margin: 16px 0 0;
   max-width: 400px;
   font-size: 18px;
   font-weight: 400;
@@ -63,8 +63,138 @@
 }
 
 .about__image {
-  max-width: 50%;
+  max-width: 47%;
   height: 100%;
   border: 10px solid #151515;
-  box-sizing: border-box;
+  margin-bottom: 15px;
+}
+
+@media (min-width: 320px) and (max-width: 1200px) {
+  .about__description-title {
+    font-size: 2.8vw;
+  }
+
+  .about__description-title::after {
+    margin-top: 14px;
+    border-bottom: black solid 1.5px;
+  }
+
+  .about__description-text {
+    font-size: 1.4vw;
+    line-height: 1.5;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 945px) {
+  .about {
+    padding: 22px;
+  }
+
+  .about__description-title::after {
+    width: 160px;
+  }
+
+  .about__description {
+    border: 8px solid #151515;
+    padding: 16px 24px;
+  }
+
+  .about__description-text {
+    line-height: 1.4;
+  }
+
+  .about__image {
+    border: 8px solid #151515;
+    width: 46%;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 780px) {
+  .about__header-image {
+    height: 48vw;
+  }
+
+  .about {
+    flex-direction: column;
+    align-items: center;
+    padding: 12px;
+    gap: 12px;
+    height: fit-content;
+  }
+
+  .about__description {
+    margin-top: 16px;
+    padding: 28px 38px;
+    width: 90%;
+    box-sizing: border-box;
+  }
+
+  .about__description-title {
+    font-size: 4.2vw;
+  }
+
+  .about__description-title::after {
+    margin-top: 18px;
+  }
+
+  .about__description-text {
+    margin: 12px 0 0;
+    max-width: 450px;
+    font-size: 2.2vw;
+    line-height: 1.6;
+  }
+
+  .about__image {
+    width: 90%;
+    max-width: 90%;
+    box-sizing: border-box;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 650px) {
+  .about__header-image {
+    display: none;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 560px) {
+  .about {
+    padding: 7px;
+  }
+
+  .about__description {
+    margin-top: 16px;
+    padding: 20px 38px;
+  }
+
+  .about__description-title {
+    font-size: 5vw;
+  }
+
+  .about__description-title::after {
+    margin-top: 12px;
+  }
+
+  .about__description-text {
+    margin: 12px 0 0;
+    font-size: 2.5vw;
+    line-height: 1.6;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 420px) {
+  .about__description {
+    margin-top: 16px;
+    padding: 12px 20px;
+  }
+
+  .about__description-title::after {
+    margin-top: 6px;
+  }
+
+  .about__description-text {
+    margin: 8px 0 0;
+    font-size: 2.8vw;
+    line-height: 1.6;
+  }
 }
