--- a/src/app/page.css
+++ b/src/app/page.css
@@ -8,5 +8,11 @@
   border-left: 15px solid;
   border-image: url("/pageBorder.png") 30 fill;
   box-shadow: inset black 5px 5px 10px;
-  padding: 20px;
+  padding: 15px;
+}
+
+@media (min-width: 320px) and (max-width: 500px) {
+  .main {
+    padding: 0;
+  }
 }
