--- a/src/app/ui/ContactForm/ContactForm.css
+++ b/src/app/ui/ContactForm/ContactForm.css
@@ -11,7 +11,8 @@
 }
 
 .contact-form__inputs-wrapper {
-  width: 260px;
+  width: 23vw;
+  max-width: 240px;
 }
 
 .contact-form__label {
@@ -35,11 +36,23 @@
   margin-top: 5px;
   object-fit: cover;
   filter: sepia(0.5) grayscale(0.8);
+  height: 23vw;
+  width: 23vw;
+  max-width: 240px;
+  max-height: 240px;
+}
+
+.contact-form__message-container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-self: center;
 }
 
 .contact-form__message {
   width: 100%;
   margin: 4px 0 10px;
+  font-size: 16px;
 }
 
 .contact-form__submit {
@@ -47,7 +60,7 @@
   height: 35px;
   background-color: #4f4f4f;
   align-self: center;
-  margin: 15px;
+  margin: 15px 0;
   font-size: 16px;
   line-height: 1.2rem;
 }
@@ -55,4 +68,112 @@
 .contact-form__submit:hover {
   background-color: #2e4a4a;
   color: white;
+}
+
+@media (min-width: 980px) and (max-width: 1070px) {
+  .contact-form__inputs-wrapper {
+    width: 30vw;
+    max-width: 240px;
+  }
+
+  .contact-form__input {
+    margin: 3px 0 8px;
+  }
+
+  .contact-form__reference-image {
+    width: 30vw;
+    height: 30vw;
+  }
+}
+
+@media (min-width: 720px) and (max-width: 980px) {
+  .contact-form__inputs-wrapper {
+    width: 30vw;
+  }
+
+  .contact-form__reference-image {
+    height: 30vw;
+    width: 30vw;
+  }
+
+  .contact-form__input {
+    margin: 3px 0 8px;
+    font-size: 16px;
+    padding: 4px;
+    box-sizing: border-box;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 720px) {
+  .contact-form__top-section-wrapper {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .contact-form__inputs-wrapper {
+    width: 55vw;
+    max-width: 400px;
+  }
+
+  .contact-form__reference-image {
+    height: 44vw;
+    width: 55vw;
+    max-width: 400px;
+    max-height: 400px;
+    box-sizing: border-box;
+    margin-bottom: 4px;
+  }
+
+  .contact-form__input {
+    margin: 3px 0 8px;
+    font-size: 16px;
+  }
+
+  .contact-form__message-container {
+    width: 55vw;
+    max-width: 400px;
+  }
+
+  .contact-form__message {
+    width: 55vw;
+    max-width: 400px;
+    align-self: center;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 720px) {
+  .contact-form__top-section-wrapper {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .contact-form__inputs-wrapper {
+    width: 100%;
+    max-width: 600px;
+  }
+
+  .contact-form__reference-image {
+    height: 55vw;
+    width: 100%;
+    max-width: 600px;
+    max-height: 600px;
+    box-sizing: border-box;
+    margin-bottom: 4px;
+  }
+
+  .contact-form__input {
+    margin: 3px 0 8px;
+    font-size: 16px;
+  }
+
+  .contact-form__message-container {
+    width: 100%;
+    max-width: 600px;
+  }
+
+  .contact-form__message {
+    width: 100%;
+    max-width: 600px;
+    align-self: center;
+  }
 }
