--- a/src/app/ui/GalleryCard/GalleryCard.css
+++ b/src/app/ui/GalleryCard/GalleryCard.css
@@ -1,16 +1,18 @@
 .gallery-card {
   background-color: #150c01;
   margin-bottom: 15px;
-  width: 250px;
-  height: 270px;
+  width: 24vw;
+  height: fit-content;
+  max-width: 250px;
+  max-height: 270px;
   color: white;
   padding: 7px;
-  box-shadow: 5px 5px 10px black;
 }
 
 .gallery-card__image-container {
   position: relative;
-  height: 220px;
+  height: 21vw;
+  max-height: 220px;
   width: 100%;
   background-color: white;
 }
@@ -18,7 +20,7 @@
 .gallery-card__image-container:hover {
   cursor: pointer;
   opacity: 0.9;
-  filter: brightness(1.75) contrast(0.5) sepia(0.3);
+  filter: brightness(1.4) contrast(0.7) sepia(0.2);
 }
 
 .gallery-card__image-container::after {
@@ -59,6 +61,7 @@
 }
 
 .gallery-card__price {
+  font-size: 15px;
   margin: 5px 0;
 }
 
@@ -66,16 +69,66 @@
   width: 80px;
   height: 25px;
   border: none;
-  font-size: 14px;
+  font-size: 15px;
 }
 
-@media (min-width: 320px) and (max-width: 1200px) {
+@media (min-width: 320px) and (max-width: 820px) {
+  .gallery-card__image-title {
+    font-size: 15px;
+  }
+
+  .gallery-card__price {
+    margin: 5px 0;
+  }
+
+  .gallery-card__button {
+    width: 65px;
+    height: 25px;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 710px) {
   .gallery-card {
-    width: 200px;
-    height: 216px;
+    margin-bottom: 10px;
+    width: 38vw;
+  }
+
+  .gallery-card__image-title {
+    font-size: 15px;
   }
 
   .gallery-card__image-container {
-    height: 170px;
+    position: relative;
+    height: 35vw;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 400px) {
+  .gallery-card {
+    margin-bottom: 8px;
+    width: 75vw;
+    max-width: none;
+    max-height: none;
+  }
+
+  .gallery-card__image-container {
+    position: relative;
+    height: 70vw;
+    max-height: none;
+  }
+
+  .gallery-card__image-title {
+    font-size: 18px;
+  }
+
+  .gallery-card__price {
+    font-size: 18px;
+    margin: 5px 0;
+  }
+
+  .gallery-card__button {
+    width: 28%;
+    height: 30px;
+    font-size: 16px;
   }
 }
