--- a/src/app/ui/ImageBanner/ImageBanner.css
+++ b/src/app/ui/ImageBanner/ImageBanner.css
@@ -15,24 +15,23 @@
   left: 3%;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
   width: 30%;
-  height: 93%;
   color: white;
   background-image: url("/banner-text-background.png");
   background-position: center;
   background-size: cover;
   align-items: center;
   overflow: hidden;
+  min-height: 475px;
 }
 
 .banner__textbox_text {
-  font-size: 18px;
+  font-size: 17px;
   font-weight: 400;
   line-height: 1.8rem;
-  margin: 0 8%;
+  margin: 10px 8%;
   text-align: center;
-  max-width: 250px;
+  max-width: 270px;
 }
 
 .banner__logo {
@@ -42,15 +41,92 @@
 }
 
 .banner__button {
-  margin-bottom: 27.5px;
+  margin: 10px 0 25px;
   width: 175px;
   height: 35px;
   color: white;
   font-size: 16px;
 }
 
-.banner__button:hover {
-  cursor: pointer;
-  background-color: #efe4d3;
-  color: black;
+@media (min-width: 320px) and (max-width: 1160px) {
+  .banner__textbox {
+    min-height: 0;
+  }
+
+  .banner__textbox_text {
+    font-size: 1.6vw;
+    line-height: 1.6rem;
+    margin: 8px 8%;
+  }
+
+  .banner__logo {
+    padding-top: 30px;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 940px) {
+  .banner__textbox {
+    top: 0;
+    left: 0;
+    width: 33%;
+    height: 41vw;
+    box-shadow: black 5px 2px 5px;
+  }
+
+  .banner__textbox_text {
+    line-height: 1.3rem;
+    margin: 10px 9%;
+  }
+
+  .banner__logo {
+    width: 70%;
+    padding-top: 35px;
+  }
+
+  .banner__button {
+    font-size: 14px;
+    height: 30px;
+    width: 170px;
+    margin: 0;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 780px) {
+  .banner__textbox {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    background-image: url("/banner-text-background.png");
+    background-position: center;
+    background-size: cover;
+    align-items: center;
+    padding: 30px 0 15px;
+  }
+
+  .banner__textbox_text {
+    font-size: 16px;
+    line-height: 1.8rem;
+    max-width: 500px;
+  }
+
+  .banner__logo {
+    padding: 0 0 10px;
+    width: 290px;
+  }
+
+  .banner__button {
+    margin: 20px 0 10px;
+    width: 175px;
+    height: 35px;
+  }
+
+  @media (min-width: 320px) and (max-width: 650px) {
+    .banner__image {
+      display: none;
+    }
+
+    .banner__textbox {
+      padding: 50px 0;
+    }
+  }
 }
