--- a/src/app/ui/Shop/Shop.css
+++ b/src/app/ui/Shop/Shop.css
@@ -1,23 +1,9 @@
-.shop__title-banner {
-  background-image: url("/shop-banner.png");
-  background-size: cover;
-  margin: 10px 0 30px;
-  padding: 15px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 43px;
-  color: #efe4d3;
-  letter-spacing: 3px;
-  box-shadow: 5px 5px 10px black;
-}
-
 .shop__gallery {
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
-  padding: 0 15px;
   gap: 5px 20px;
+  margin-top: 10px;
 }
 
 .shop__buttons {
@@ -36,6 +22,46 @@
 .shop__button {
   margin: 20px 0 27.5px;
   width: 100%;
-  height: 50px;
+  padding: 10px;
   font-size: 22px;
+}
+
+@media (min-width: 601px) and (max-width: 910px) {
+  .shop__gallery {
+    gap: 5px 15px;
+  }
+
+  .shop__button {
+    margin: 20px 0 27.5px;
+    font-size: 2.2vw;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 600px) {
+  .shop__gallery {
+    gap: 0;
+    padding: 0;
+  }
+
+  .shop__buttons {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .hidden__button-container {
+    width: 80%;
+  }
+
+  .shop__button {
+    margin: 10px 0;
+    font-size: 3.4vw;
+  }
+}
+
+/* shide 7th and 8th child */
+@media (min-width: 711px) and (max-width: 1200px) {
+  .shop__gallery-homepage > :nth-child(7),
+  .shop__gallery-homepage > :nth-child(8) {
+    display: none;
+  }
 }
