--- a/src/app/ui/TitleBanner/Titlebanner.css
+++ b/src/app/ui/TitleBanner/Titlebanner.css
@@ -6,23 +6,28 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 43px;
+  font-size: 55px;
   color: #efe4d3;
   letter-spacing: 3px;
 }
 
-@media (min-width: 320px) and (max-width: 910px) {
+@media (max-width: 1290px) {
   .title-banner {
-    font-size: 32px;
+    font-size: 43px;
     margin: 0 0 15px;
     padding: 15px;
   }
 }
 
-@media (min-width: 320px) and (max-width: 600px) {
+@media (max-width: 910px) {
+  .title-banner {
+    font-size: 32px;
+  }
+}
+
+@media (max-width: 600px) {
   .title-banner {
     text-align: center;
-    margin: 0 0 15px;
     padding: 20px 10px;
     letter-spacing: 2px;
   }
