--- a/src/app/our-story/page.css
+++ b/src/app/our-story/page.css
@@ -11,16 +11,16 @@
 
 .about {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   gap: 20px;
-  padding: 30px;
+  padding: 40px;
   box-shadow: inset black 5px 5px 10px;
 }
 
 .about__header-image {
   position: relative;
   width: 100%;
-  max-height: 550px;
+  max-height: 730px;
   height: 43vw;
   object-fit: cover;
   object-position: top;
@@ -28,7 +28,7 @@
 }
 
 .about__description {
-  width: 50%;
+  width: 40%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -41,7 +41,7 @@
 }
 
 .about__description-title {
-  font-size: 34px;
+  font-size: 38px;
   margin: 0;
   line-height: 2rem;
 }
@@ -50,26 +50,49 @@
   display: block;
   content: "";
   border-bottom: black solid 2px;
-  margin-top: 20px;
+  margin-top: 16px;
   width: 200px;
 }
 
 .about__description-text {
   margin: 16px 0 0;
-  max-width: 400px;
-  font-size: 18px;
+  max-width: 450px;
+  font-size: 22px;
   font-weight: 400;
-  line-height: 1.6rem;
+  line-height: 2rem;
 }
 
 .about__image {
-  max-width: 47%;
+  max-width: 50%;
   height: 100%;
   border: 10px solid #151515;
-  margin-bottom: 15px;
 }
 
-@media (min-width: 320px) and (max-width: 1200px) {
+@media (max-width: 1400px) {
+  .about__description-title {
+    font-size: 36px;
+  }
+
+  .about__description-text {
+    max-width: 400px;
+    font-size: 20px;
+    line-height: 1.5rem;
+  }
+}
+
+@media (max-width: 1200px) {
+  .about {
+    padding: 30px;
+  }
+
+  .about__header-image {
+    max-height: 550px;
+  }
+
+  .about__description {
+    width: 50%;
+  }
+
   .about__description-title {
     font-size: 2.8vw;
   }
@@ -81,11 +104,10 @@
 
   .about__description-text {
     font-size: 1.4vw;
-    line-height: 1.5;
   }
 }
 
-@media (min-width: 320px) and (max-width: 945px) {
+@media (max-width: 945px) {
   .about {
     padding: 22px;
   }
@@ -109,7 +131,7 @@
   }
 }
 
-@media (min-width: 320px) and (max-width: 780px) {
+@media (max-width: 780px) {
   .about__header-image {
     height: 48vw;
   }
@@ -151,13 +173,13 @@
   }
 }
 
-@media (min-width: 320px) and (max-width: 650px) {
+@media (max-width: 650px) {
   .about__header-image {
     display: none;
   }
 }
 
-@media (min-width: 320px) and (max-width: 560px) {
+@media (max-width: 560px) {
   .about {
     padding: 7px;
   }
@@ -182,7 +204,7 @@
   }
 }
 
-@media (min-width: 320px) and (max-width: 420px) {
+@media (max-width: 420px) {
   .about__description {
     margin-top: 16px;
     padding: 12px 20px;
