--- a/src/app/ui/ContactForm/ContactForm.css
+++ b/src/app/ui/ContactForm/ContactForm.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   width: 100%;
   text-align: left;
+  padding-top: 10px;
 }
 
 .contact-form__top-section-wrapper {
@@ -12,22 +13,23 @@
 
 .contact-form__inputs-wrapper {
   width: 23vw;
-  max-width: 240px;
+  max-width: 320px;
 }
 
 .contact-form__label {
-  font-size: 18px;
+  font-size: 20px;
   font-weight: 700;
   margin: 0;
 }
 
 .contact-form__input {
   width: 100%;
-  margin: 5px 0 14px;
+  margin: 5px 0 18px;
   line-height: 1.2rem;
-  font-size: 16px;
+  font-size: 18px;
   padding: 4px;
   box-sizing: border-box;
+  border: black 1px solid;
 }
 
 .contact-form__reference-image {
@@ -38,8 +40,8 @@
   filter: sepia(0.5) grayscale(0.8);
   height: 23vw;
   width: 23vw;
-  max-width: 240px;
-  max-height: 240px;
+  max-width: 280px;
+  max-height: 280px;
 }
 
 .contact-form__message-container {
@@ -52,7 +54,9 @@
 .contact-form__message {
   width: 100%;
   margin: 4px 0 10px;
-  font-size: 16px;
+  font-size: 20px;
+  border: black 1px solid;
+  box-sizing: border-box;
 }
 
 .contact-form__submit {
@@ -70,23 +74,30 @@
   color: white;
 }
 
-@media (min-width: 980px) and (max-width: 1070px) {
+@media (max-width: 1290px) {
   .contact-form__inputs-wrapper {
-    width: 30vw;
     max-width: 240px;
   }
 
+  .contact-form__label {
+    font-size: 18px;
+  }
+
   .contact-form__input {
-    margin: 3px 0 8px;
+    font-size: 16px;
   }
 
   .contact-form__reference-image {
-    width: 30vw;
-    height: 30vw;
+    max-width: 240px;
+    max-height: 240px;
+  }
+
+  .contact-form__message {
+    font-size: 16px;
   }
 }
 
-@media (min-width: 720px) and (max-width: 980px) {
+@media (max-width: 1070px) {
   .contact-form__inputs-wrapper {
     width: 30vw;
   }
@@ -95,16 +106,13 @@
     height: 30vw;
     width: 30vw;
   }
-
-  .contact-form__input {
-    margin: 3px 0 8px;
-    font-size: 16px;
-    padding: 4px;
-    box-sizing: border-box;
-  }
 }
 
-@media (min-width: 320px) and (max-width: 720px) {
+@media (max-width: 720px) {
+  .contact-form {
+    padding-top: 0;
+  }
+
   .contact-form__top-section-wrapper {
     flex-direction: column;
     align-items: center;
@@ -120,13 +128,10 @@
     width: 55vw;
     max-width: 400px;
     max-height: 400px;
-    box-sizing: border-box;
-    margin-bottom: 4px;
   }
 
   .contact-form__input {
     margin: 3px 0 8px;
-    font-size: 16px;
   }
 
   .contact-form__message-container {
@@ -137,43 +142,5 @@
   .contact-form__message {
     width: 55vw;
     max-width: 400px;
-    align-self: center;
-  }
-}
-
-@media (min-width: 320px) and (max-width: 720px) {
-  .contact-form__top-section-wrapper {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .contact-form__inputs-wrapper {
-    width: 100%;
-    max-width: 600px;
-  }
-
-  .contact-form__reference-image {
-    height: 55vw;
-    width: 100%;
-    max-width: 600px;
-    max-height: 600px;
-    box-sizing: border-box;
-    margin-bottom: 4px;
-  }
-
-  .contact-form__input {
-    margin: 3px 0 8px;
-    font-size: 16px;
-  }
-
-  .contact-form__message-container {
-    width: 100%;
-    max-width: 600px;
-  }
-
-  .contact-form__message {
-    width: 100%;
-    max-width: 600px;
-    align-self: center;
   }
 }
