--- a/src/app/ui/Footer/Footer.css
+++ b/src/app/ui/Footer/Footer.css
@@ -2,11 +2,11 @@
   display: flex;
   justify-content: space-between;
   height: auto;
-  padding: 15px 20px 38px;
+  padding: 20px 30px 38px;
   background-image: url("/footerBackground.png");
   color: white;
-  font-size: 14px;
-  line-height: 1.2rem;
+  font-size: 18px;
+  line-height: 1.4rem;
   position: relative;
 }
 
@@ -18,11 +18,11 @@
 
 .footer__logo {
   position: absolute;
-  top: 15px;
-  left: 40%;
+  top: 10px;
+  left: 44%;
   height: auto;
   width: 24vw;
-  max-width: 200px;
+  max-width: 250px;
 }
 
 .footer__text {
@@ -31,7 +31,21 @@
   font-weight: 400;
 }
 
-@media (min-width: 540px) and (max-width: 800px) {
+@media (max-width: 1290px) {
+  .footer {
+    padding: 15px 20px 38px;
+    font-size: 14px;
+    line-height: 1.2rem;
+  }
+
+  .footer__logo {
+    top: 15px;
+    left: 40%;
+    max-width: 200px;
+  }
+}
+
+@media (max-width: 800px) {
   .footer {
     padding: 15px 20px 20px;
     font-size: 12px;
@@ -47,7 +61,7 @@
   }
 }
 
-@media (min-width: 320px) and (max-width: 620px) {
+@media (max-width: 620px) {
   .footer {
     padding: 10px 20px 20px;
     font-size: 11px;
