--- a/src/app/ui/GalleryCard/GalleryCard.css
+++ b/src/app/ui/GalleryCard/GalleryCard.css
@@ -3,8 +3,8 @@
   margin-bottom: 15px;
   width: 24vw;
   height: fit-content;
-  max-width: 250px;
-  max-height: 270px;
+  max-width: 320px;
+  max-height: 350px;
   color: white;
   padding: 7px;
 }
@@ -12,7 +12,7 @@
 .gallery-card__image-container {
   position: relative;
   height: 21vw;
-  max-height: 220px;
+  max-height: 300px;
   width: 100%;
   background-color: white;
 }
@@ -44,10 +44,11 @@
   background-color: rgba(0, 0, 0, 0.7);
   bottom: 0;
   margin: 0;
-  font-size: 16px;
+  font-size: 24px;
   line-height: 2rem;
   text-align: center;
   width: 100%;
+  font-weight: 400;
 }
 
 .gallery-card__info-container {
@@ -55,21 +56,50 @@
   justify-content: space-between;
   align-items: center;
   margin-top: 18px;
-  font-size: 15px;
+  font-size: 22px;
   padding-left: 7px;
   line-height: 1.2rem;
 }
 
 .gallery-card__price {
-  font-size: 15px;
+  font-size: 20px;
   margin: 5px 0;
 }
 
 .gallery-card__button {
-  width: 80px;
-  height: 25px;
+  width: 100px;
+  height: 30px;
   border: none;
-  font-size: 15px;
+  font-size: 18px;
+}
+
+@media (min-width: 820px) and (max-width: 1474px) {
+  .gallery-card {
+    max-width: 250px;
+    max-height: 270px;
+  }
+
+  .gallery-card__image-container {
+    max-height: 220px;
+  }
+
+  .gallery-card__image-title {
+    font-size: 20px;
+  }
+
+  .gallery-card__info-container {
+    font-size: 18px;
+  }
+
+  .gallery-card__price {
+    font-size: 18px;
+  }
+
+  .gallery-card__button {
+    width: 80px;
+    height: 25px;
+    font-size: 18px;
+  }
 }
 
 @media (min-width: 320px) and (max-width: 820px) {
