--- a/src/app/ui/Header/Header.css
+++ b/src/app/ui/Header/Header.css
@@ -9,14 +9,14 @@
 .header__navigation {
   display: flex;
   background: #141414;
-  padding-right: 30px;
-  height: 55px;
   justify-content: flex-end;
   align-items: center;
-  font-size: 22px;
-  gap: 16px;
   box-shadow: 0px 4px 2px -2px rgba(255, 255, 255, 0.5);
   z-index: 1;
+  padding-right: 40px;
+  height: 65px;
+  font-size: 26px;
+  gap: 20px;
 }
 
 .header__navigation_text:hover {
@@ -32,12 +32,27 @@
   top: 20px;
   left: 2%;
   z-index: 1000;
+  max-width: 130px;
+}
+
+.header__mobile-menu {
+  display: none;
+  border: none;
+}
+
+@media (min-width: 800px) and (max-width: 1290px) {
+  .header__navigation {
+    padding-right: 30px;
+    height: 55px;
+    font-size: 22px;
+    gap: 15px;
+  }
 }
 
 @media (min-width: 320px) and (max-width: 800px) {
   .header__navigation {
     padding-right: 25px;
-    height: 40px;
+    height: 45px;
     font-size: 18px;
     gap: 16px;
   }
@@ -47,5 +62,40 @@
     height: 75px;
     top: 12px;
     left: 4%;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 600px) {
+  .header {
+    height: 60px;
+  }
+
+  .header__navigation {
+    display: none;
+  }
+
+  .header__mobile-menu {
+    display: block;
+    position: absolute;
+    z-index: 2;
+    top: 5px;
+    right: 5px;
+    height: 44px;
+    width: 44px;
+    padding: 0;
+    background: transparent;
+  }
+
+  .header__mobile-menu-image {
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: auto;
+    background-color: white;
+  }
+
+  .header__mobile-menu-image:hover {
+    cursor: pointer;
   }
 }
