--- a/src/app/ui/ImageBanner/ImageBanner.css
+++ b/src/app/ui/ImageBanner/ImageBanner.css
@@ -22,16 +22,19 @@
   background-size: cover;
   align-items: center;
   overflow: hidden;
-  min-height: 475px;
+  min-height: 500px;
+  height: 41vw;
+  max-height: 700px;
+  justify-content: center;
 }
 
 .banner__textbox_text {
-  font-size: 17px;
+  font-size: 20px;
   font-weight: 400;
-  line-height: 1.8rem;
-  margin: 10px 8%;
+  line-height: 2.2rem;
+  margin: 25px 8%;
   text-align: center;
-  max-width: 270px;
+  max-width: 350px;
 }
 
 .banner__logo {
@@ -41,14 +44,33 @@
 }
 
 .banner__button {
-  margin: 10px 0 25px;
-  width: 175px;
-  height: 35px;
+  margin: 10px 0 20px;
+  width: 200px;
+  height: 40px;
   color: white;
-  font-size: 16px;
+  font-size: 22px;
 }
 
-@media (min-width: 320px) and (max-width: 1160px) {
+@media (max-width: 1290px) {
+  .banner__textbox {
+    min-height: 475px;
+  }
+
+  .banner__textbox_text {
+    font-size: 18px;
+    line-height: 1.8rem;
+    margin: 10px 8%;
+    max-width: 270px;
+  }
+
+  .banner__button {
+    width: 175px;
+    height: 35px;
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 1160px) {
   .banner__textbox {
     min-height: 0;
   }
@@ -62,15 +84,20 @@
   .banner__logo {
     padding-top: 30px;
   }
+
+  .banner__button {
+    font-size: 16px;
+  }
 }
 
-@media (min-width: 320px) and (max-width: 940px) {
+@media (max-width: 940px) {
   .banner__textbox {
     top: 0;
     left: 0;
-    width: 33%;
+    width: 32%;
     height: 41vw;
     box-shadow: black 5px 2px 5px;
+    justify-content: flex-start;
   }
 
   .banner__textbox_text {
@@ -91,15 +118,11 @@
   }
 }
 
-@media (min-width: 320px) and (max-width: 780px) {
+@media (max-width: 780px) {
   .banner__textbox {
-    position: relative;
+    position: static;
     width: 100%;
     height: 100%;
-    background-image: url("/banner-text-background.png");
-    background-position: center;
-    background-size: cover;
-    align-items: center;
     padding: 30px 0 15px;
   }
 
@@ -120,7 +143,7 @@
     height: 35px;
   }
 
-  @media (min-width: 320px) and (max-width: 650px) {
+  @media (max-width: 650px) {
     .banner__image {
       display: none;
     }
