--- a/src/app/ui/loginForm/LoginForm.css
+++ b/src/app/ui/loginForm/LoginForm.css
@@ -5,31 +5,26 @@
 }
 
 .login-form__label {
-  font-size: 18px;
+  font-size: 22px;
   font-weight: 700;
   margin: 0;
 }
 
 .login-form__input {
-  margin: 5px 0 14px;
+  margin: 5px 0 20px;
   line-height: 1.2rem;
-  font-size: 16px;
+  font-size: 18px;
   padding: 4px;
   box-sizing: border-box;
 }
 
-.login-form__message {
-  width: 100%;
-  margin: 4px 0 10px;
-}
-
 .login-form__submit {
-  width: 170px;
-  height: 35px;
+  width: 200px;
+  height: 40px;
   background-color: #4f4f4f;
   align-self: center;
   margin: 25px;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1.2rem;
 }
 
@@ -38,7 +33,26 @@
   color: white;
 }
 
-@media (min-width: 520px) and (max-width: 800px) {
+@media (max-width: 800px) {
+  .login-form__label {
+    font-size: 18px;
+  }
+
+  .login-form__input {
+    margin: 5px 0 14px;
+    font-size: 16px;
+  }
+
+  .login-form__submit {
+    width: 170px;
+    height: 35px;
+    margin: 25px;
+    font-size: 16px;
+    line-height: 1.2rem;
+  }
+}
+
+@media (max-width: 800px) {
   .login-form__submit {
     width: 140px;
     margin: 15px 0 25px;
@@ -46,14 +60,13 @@
   }
 }
 
-@media (min-width: 320px) and (max-width: 520px) {
+@media (max-width: 520px) {
   .login-form__input {
-    margin: 5px 0 25px;
-    font-size: 14px;
+    margin-bottom: 25px;
     padding: 2px;
   }
 
   .login-form__submit {
-    margin: 5px 0 25px;
+    margin-top: 5px;
   }
 }
