--- a/src/app/page.css
+++ b/src/app/page.css
@@ -1,12 +1,7 @@
 .main {
   display: flex;
   flex-direction: column;
-  background-image: url("/background.jpg");
-  background-position: center;
-  background-size: cover;
-  border-right: 15px solid;
-  border-left: 15px solid;
-  border-image: url("/pageBorder.png") 30 fill;
+  position: relative;
   box-shadow: inset black 5px 5px 10px;
   padding: 15px;
 }
