--- a/src/app/ui/GalleryHeader/GalleryHeader.css
+++ b/src/app/ui/GalleryHeader/GalleryHeader.css
@@ -11,11 +11,11 @@
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  background-image: url("/gallery-header-about-background.png");
   width: 100%;
   color: #efe4d3;
   padding: 0 30px;
   text-align: center;
+  position: relative;
 }
 
 .gallery-header__title {
