--- a/src/app/ui/Header/Header.css
+++ b/src/app/ui/Header/Header.css
@@ -8,7 +8,7 @@
 
 .header__navigation {
   display: flex;
-  background: #141414;
+  background-color: #141414;
   justify-content: flex-end;
   align-items: center;
   box-shadow: 0px 4px 2px -2px rgba(255, 255, 255, 0.5);
