--- a/src/app/ui/ImageCard/ImageCard.css
+++ b/src/app/ui/ImageCard/ImageCard.css
@@ -1,7 +1,8 @@
 .image-card {
   position: relative;
   width: 30%;
-  height: auto;
+  height: 19vw;
+  max-height: 330px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -28,8 +29,11 @@
   bottom: 0;
   left: 0;
   background-color: rgba(0, 0, 0, 0.5);
-  height: 35px;
+  height: 40px;
   width: 100%;
   text-align: center;
-  font-size: 22px;
+  font-size: 24px;
+  line-height: 2.4rem;
+  box-sizing: border-box;
+  padding-top: 2px;
 }
