--- a/src/app/ui/Shop/ItemModal/ItemModal.css
+++ b/src/app/ui/Shop/ItemModal/ItemModal.css
@@ -391,7 +391,7 @@
 
   .item-modal__info-container {
     width: 100%;
-    height: 700px;
+    height: auto;
     flex-direction: column;
     padding: 0;
     font-size: 20px;
@@ -447,8 +447,8 @@
   .item-modal__container {
     width: 100vw;
     height: 100dvh;
-    padding: 14px;
-    box-sizing: border-box;
+    padding: 10px;
+    box-sizing: content-box;
   }
 
   .item-modal__info-container {
