image touch responsive design & update LoadingImage > ImageLoadingWrapper

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -41,6 +41,10 @@ p {
   z-index: -1000;
 }
 
+.global__no-scroll {
+  overflow: hidden;
+}
+
 .global__page-background {
   background-color: #4e4d44;
 }
