--- a/src/app/ui/Shop/ItemModal/ItemModal.css
+++ b/src/app/ui/Shop/ItemModal/ItemModal.css
@@ -16,7 +16,6 @@
   left: 0;
   right: 0;
   bottom: 0;
-  z-index: -1;
 }
 
 .modal__close-button {
@@ -54,17 +53,42 @@
 }
 
 .item-modal__image-container {
-  height: 100%;
+  flex: 0 0 auto;
+  height: auto;
   width: 52%;
   box-sizing: border-box;
   background-color: #171717;
   position: relative;
+  scroll-snap-align: start;
+  overflow-x: hidden;
+}
+
+.item-modal__image-wrapper {
+  display: flex;
+  scroll-snap-type: x mandatory;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+}
+
+.image-container {
+  flex: 0 0 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
 }
 
 .item-modal__image {
+  flex-shrink: 0;
   height: 100%;
   width: 100%;
   object-fit: contain;
+  scroll-snap-align: start;
+  position: static;
+}
+
+.image__smooth-transition {
+  transition: transform 0.3s ease-out;
 }
 
 .item-modal__info-container {
@@ -387,6 +411,15 @@
 
   .item-modal__image-container {
     width: 100%;
+    height: 100%;
+    flex: 1 1 auto;
+  }
+
+  .item-modal__image {
+    height: 100%;
+    width: auto;
+    max-height: 100%;
+    max-width: 100%;
   }
 
   .item-modal__info-container {
