--- a/src/app/contact/ContactForm/ContactForm.css
+++ b/src/app/contact/ContactForm/ContactForm.css
@@ -14,6 +14,7 @@ select:invalid {
 .contact-form__top-section-wrapper {
   display: flex;
   justify-content: space-between;
+  width: 100%;
 }
 
 .contact-form__inputs-wrapper {
@@ -27,6 +28,11 @@ select:invalid {
   gap: 0 29px;
   height: fit-content;
   max-height: 192px;
+  margin-bottom: 10px;
+}
+
+.inputs__column {
+  width: 100%;
 }
 
 .second__column {
@@ -43,14 +49,16 @@ select:invalid {
 .contact-form__error {
   color: red;
   font-size: 14px;
-  padding-left: 5px;
   line-height: 1.2rem;
+  display: block;
+  height: 15px;
+  padding: 5px 0;
 }
 
 .contact-form__input {
   width: 100%;
   height: 32px;
-  margin: 5px 0;
+  margin-top: 1px;
   line-height: 1.2rem;
   font-size: 18px;
   padding: 4px;
@@ -83,7 +91,7 @@ select:invalid {
 
 .contact-form__message {
   width: 100%;
-  margin: 4px 0 10px;
+  margin-top: 4px;
   font-size: 20px;
   border: black 1px solid;
   box-sizing: border-box;
@@ -97,11 +105,11 @@ select:invalid {
 .contact-form__submit {
   width: 200px;
   height: 45px;
-  background-color: #414141;
   align-self: center;
   margin: 15px 0;
   font-size: 20px;
   line-height: 1.2rem;
+  background-color: #414141;
 }
 
 .contact-form__submit:hover {
@@ -110,12 +118,12 @@ select:invalid {
 }
 
 .contact-form__submit_disabled {
-  background-color: #414141;
+  background-color: #868686;
   cursor: default;
 }
 
 .contact-form__submit_disabled:hover {
-  background-color: #414141;
+  background-color: #979797;
   cursor: default;
 }
 
