--- a/src/app/ui/ShopBanner/TitleBanner.css
+++ b/src/app/ui/ShopBanner/TitleBanner.css
@@ -35,7 +35,7 @@
 @media (max-width: 600px) {
   .title-banner {
     text-align: center;
-    padding: 20px 10px;
+    padding: 10px;
     letter-spacing: 2px;
   }
 
