--- a/src/app/woodshop/page.css
+++ b/src/app/woodshop/page.css
@@ -2,18 +2,18 @@
   display: flex;
   flex-direction: column;
   box-shadow: inset black 5px 5px 10px;
-  padding: 40px;
+  padding: 15px 40px;
   position: relative;
 }
 
 @media (max-width: 910px) {
   .woodshop__main {
-    padding: 30px 15px 15px;
+    padding: 15px;
   }
 }
 
 @media (max-width: 480px) {
   .woodshop__main {
-    padding: 20px 0 0;
+    padding: 15px 0;
   }
 }
