--- a/src/app/contact/ContactForm/ContactForm.css
+++ b/src/app/contact/ContactForm/ContactForm.css
@@ -51,8 +51,9 @@ select:invalid {
   font-size: 14px;
   line-height: 1.2rem;
   display: block;
-  height: 15px;
-  padding: 5px 0;
+  height: fit-content;
+  min-height: 10px;
+  padding: 2px 0;
 }
 
 .contact-form__input {
@@ -175,10 +176,13 @@ select:invalid {
   .contact-form__inputs-wrapper {
     width: 100%;
     max-width: 400px;
+    margin-bottom: 0;
   }
 
   .contact-form__image-container {
     width: 100%;
+    max-width: 400px;
+    margin-bottom: 5px;
   }
 
   .contact-form__reference-image {
@@ -190,7 +194,7 @@ select:invalid {
   }
 
   .contact-form__input {
-    margin: 3px 0 8px;
+    margin: 2px 0;
   }
 
   .contact-form__message-container {
@@ -201,5 +205,11 @@ select:invalid {
   .contact-form__message {
     width: 100%;
     max-width: 400px;
+  }
+
+  .contact-form__submit {
+    height: 40px;
+    margin: 5px 0 15px;
+    font-size: 18px;
   }
 }
