--- a/src/app/ui/Shop/SearchBar/SearchBar.css
+++ b/src/app/ui/Shop/SearchBar/SearchBar.css
@@ -1,13 +1,15 @@
+input[type="checkbox" i] {
+  transform: translateY(1px);
+}
+
 .search-bar {
   display: flex;
-  justify-content: center;
   width: 100%;
   padding: 10px 20px;
-  background-color: #171717;
+  background-color: #0f0f0f;
   color: white;
   font-size: 18px;
   box-sizing: border-box;
-  border-radius: 5px;
   margin-bottom: 15px;
 }
 
@@ -16,20 +18,16 @@
   flex-direction: column;
   align-items: flex-start;
   gap: 2px;
+  width: 100%;
 }
 
 .search-bar__main-options {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   gap: 2px 20px;
   align-items: center;
   width: 100%;
-}
-
-.main-options__filter-section {
-  display: flex;
-  align-items: center;
-  gap: 15px;
+  min-width: 80vw;
 }
 
 .search-bar__input,
@@ -41,27 +39,19 @@
   border-radius: 5px;
 }
 
-.search-bar__search-input {
-  width: fit-content;
-  flex: 1 0;
-}
-
 .search-bar__search-field {
-  width: 25vw;
+  width: 100%;
   border: none;
   border-radius: 5px;
-  height: 32px;
-}
-
-.search-bar__filter-options {
-  width: fit-content;
-  display: flex;
-  gap: 8px;
+  height: 27px;
+  max-width: 500px;
 }
 
 .search-bar__filter-checkboxes {
   display: flex;
   gap: 8px;
+  height: 27px;
+  align-items: center;
 }
 
 .search-bar__filters {
@@ -83,6 +73,20 @@
   align-items: center;
 }
 
+.search-bar__search-input,
+.search-bar__filter-options {
+  width: fit-content;
+  gap: 8px;
+  display: flex;
+  height: fit-content;
+  gap: 5px;
+  align-items: center;
+}
+
+.search-bar__search-input {
+  width: 600px;
+}
+
 .search-bar__label {
   display: block;
   text-wrap: nowrap;
@@ -92,18 +96,15 @@
   margin-right: 5px;
 }
 
-.search-bar__button {
-  height: 32px;
-  width: 150px;
+@media (max-width: 1120px) {
+  .search-bar__search-input {
+    flex: 1 0;
+  }
 }
 
 @media (max-width: 1040px) {
   .search-bar {
     font-size: 16px;
-  }
-
-  .search-bar__button {
-    width: 140px;
   }
 }
 
@@ -124,12 +125,12 @@
     width: 100%;
   }
 
-  .search-bar__select {
-    width: 19vw;
+  .search-bar__search-input {
+    gap: 5px;
   }
 
-  .main-options__filter-section {
-    gap: 20px;
+  .search-bar__select {
+    width: 19vw;
   }
 
   .search-bar__filters {
@@ -142,7 +143,6 @@
   }
 
   .search-bar__filter-options {
-    flex-direction: column;
     gap: 5px;
   }
 }
@@ -153,7 +153,6 @@
   }
 
   .search-bar__main-options {
-    flex-direction: column;
     gap: 10px;
   }
 
@@ -161,28 +160,35 @@
     width: 100%;
   }
 
-  .main-options__filter-section {
-    width: 100%;
-    justify-content: space-between;
-  }
-
+  .search-bar__search-input,
   .search-bar__filter-options {
-    flex-direction: row;
-  }
-
-  .search-bar__search-input {
-    flex-direction: row;
-    align-items: center;
+    flex-direction: column;
+    align-items: flex-start;
+    height: 55px;
+    gap: 5px;
   }
 }
 
 @media (max-width: 570px) {
   .search-bar {
-    font-size: 14px;
+    padding: 12px 16px;
+  }
+
+  .search-bar__main-options {
+    flex-direction: column;
+    min-width: 100%;
+  }
+
+  .search-bar__search-input,
+  .search-bar__filter-options {
+    flex-direction: row;
+    height: fit-content;
+    align-items: center;
+    flex-wrap: wrap;
   }
 
   .search-bar__field {
-    width: 47%;
+    width: 46%;
   }
 
   .search-bar__search-input {
@@ -191,7 +197,7 @@
 
   .search-bar__filters {
     flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content: center;
     gap: 10px 15px;
   }
 
@@ -200,37 +206,16 @@
   }
 
   .search-bar__filter-options {
-    flex-direction: column;
-    gap: 2px;
+    width: 100%;
+    gap: 0 8px;
   }
 
   .search-bar__price-filters {
     width: 100%;
+    justify-content: center;
   }
 
-  .search-bar__button {
-    height: 30px;
-    width: 120px;
-  }
-}
-
-@media (max-width: 570px) {
-  .search-bar {
-    padding: 5px;
-  }
-
-  .search-bar__button {
-    height: 30px;
-    width: 29%;
-    font-size: 12px;
-    padding: 2px;
-  }
-
-  .main-options__filter-section {
-    gap: 5px;
-  }
-
-  .search-bar__checkbox-label {
-    font-size: 12px;
+  .search-bar__filter-checkboxes {
+    transform: translateX(-3px);
   }
 }
