--- a/src/app/page.css
+++ b/src/app/page.css
@@ -3,11 +3,14 @@
   flex-direction: column;
   position: relative;
   box-shadow: inset black 5px 5px 10px;
+}
+
+.main__container {
   padding: 15px;
 }
 
 @media (min-width: 320px) and (max-width: 500px) {
-  .main {
+  .main__container {
     padding: 0;
   }
 }
