--- a/src/app/ui/Shop/SearchBar/SearchBar.css
+++ b/src/app/ui/Shop/SearchBar/SearchBar.css
@@ -6,7 +6,7 @@ input[type="checkbox" i] {
   display: flex;
   width: 100%;
   padding: 10px 20px;
-  background-color: #0f0f0f;
+  background-color: #171410;
   color: white;
   font-size: 18px;
   box-sizing: border-box;
