--- a/src/app/woodshop/page.css
+++ b/src/app/woodshop/page.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   box-shadow: inset black 5px 5px 10px;
-  padding: 15px 40px;
+  padding: 15px 20px;
   position: relative;
 }
 
@@ -14,6 +14,6 @@
 
 @media (max-width: 480px) {
   .woodshop__main {
-    padding: 15px 0;
+    padding: 15px 0 5px;
   }
 }
