--- a/src/app/contact/ContactForm/ContactForm.css
+++ b/src/app/contact/ContactForm/ContactForm.css
@@ -195,6 +195,7 @@ select:invalid {
 
   .contact-form__input {
     margin: 2px 0;
+    font-size: 16px;
   }
 
   .contact-form__message-container {
@@ -205,6 +206,7 @@ select:invalid {
   .contact-form__message {
     width: 100%;
     max-width: 400px;
+    font-size: 16px;
   }
 
   .contact-form__submit {
