--- a/src/app/ui/Shop/SearchBar/SearchBar.css
+++ b/src/app/ui/Shop/SearchBar/SearchBar.css
@@ -160,12 +160,18 @@ input[type="checkbox" i] {
     width: 100%;
   }
 
+  .search-bar__input,
+  .search-bar__select {
+    font-size: 16px;
+  }
+
   .search-bar__search-input,
   .search-bar__filter-options {
     flex-direction: column;
     align-items: flex-start;
     height: 55px;
     gap: 5px;
+    font-size: 16px;
   }
 }
 
