--- a/src/app/ui/ShopBanner/TitleBanner.css
+++ b/src/app/ui/ShopBanner/TitleBanner.css
@@ -7,6 +7,8 @@
   align-items: center;
   color: #efe4d3;
   border-radius: 8px;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 .title-banner__text {
